--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <button class="pad-btn">button</button>
     <div class="container"></div>
     <script src="js/script.js"></script>
   </body>
